removed getbyemail route
