# api/swagger/v1/user.swagger.json
@@ -259,75 +259,6 @@
           "UserService"
         ]
       }
-    },
-    "/v1/users/{id}/{email}": {
-      "get": {
-        "operationId": "GetByEmail",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/userFindResponse"
-            }
-          },
-          "404": {
-            "description": "Returned when resource doesn't exist",
-            "schema": {
-              "type": "string",
-              "format": "string"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "email",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "api",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "language",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "experience",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "required": false,
-            "type": "integer",
-            "format": "int32"
-          }
-        ],
-        "tags": [
-          "UserService"
-        ]
-      }
     }
   },
   "definitions": {
