# pkg/api/v1/user.pb.go
@@ -616,61 +616,60 @@ func init() {
 func init() { proto.RegisterFile("user.proto", fileDescriptor_116e343673f7ffaf) }
 
 var fileDescriptor_116e343673f7ffaf = []byte{
-	// 863 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0xdd, 0x72, 0xdb, 0x44,
-	0x14, 0x46, 0x96, 0x65, 0xc7, 0x27, 0x8d, 0x1b, 0xb6, 0x6e, 0x10, 0x9e, 0x4e, 0xd0, 0x08, 0x66,
-	0x9a, 0xc9, 0x10, 0xab, 0x09, 0xe5, 0x26, 0x57, 0x4d, 0xcb, 0x4f, 0x3b, 0x30, 0xc0, 0xa8, 0x84,
-	0xe1, 0xae, 0xb3, 0x96, 0x0e, 0xf2, 0x52, 0x79, 0x57, 0x68, 0x57, 0x4e, 0x4b, 0xa7, 0x37, 0xf0,
-	0x06, 0x30, 0xc3, 0x05, 0xaf, 0xc0, 0x13, 0x70, 0xc1, 0x15, 0x8f, 0xc0, 0x2b, 0xf0, 0x14, 0x5c,
-	0x31, 0xbb, 0x6b, 0x39, 0x92, 0xd3, 0x32, 0xa1, 0x57, 0xd6, 0x77, 0xb4, 0xfb, 0xed, 0xb7, 0xdf,
-	0xf9, 0x8e, 0x05, 0x50, 0x49, 0x2c, 0x27, 0x45, 0x29, 0x94, 0x20, 0x5d, 0xfd, 0x3c, 0xbe, 0x91,
-	0x09, 0x91, 0xe5, 0x18, 0xd1, 0x82, 0x45, 0x94, 0x73, 0xa1, 0xa8, 0x62, 0x82, 0x4b, 0xbb, 0x66,
-	0xfc, 0xae, 0xf9, 0x49, 0x0e, 0x32, 0xe4, 0x07, 0xf2, 0x8c, 0x66, 0x19, 0x96, 0x91, 0x28, 0xcc,
-	0x8a, 0x8b, 0xab, 0xc3, 0x5f, 0x1c, 0x18, 0x9e, 0x16, 0x12, 0x4b, 0x15, 0xa3, 0x2c, 0x04, 0x97,
-	0x48, 0xb6, 0xc1, 0xa5, 0x05, 0xf3, 0x9d, 0xc0, 0xd9, 0x1b, 0xc4, 0xfa, 0x91, 0xec, 0x40, 0x4f,
-	0x2a, 0xaa, 0x2a, 0xe9, 0x77, 0x4c, 0x71, 0x89, 0xc8, 0x10, 0x3a, 0x2c, 0xf5, 0x5d, 0x53, 0xeb,
-	0xb0, 0x94, 0xf8, 0xd0, 0x9f, 0x53, 0x95, 0xcc, 0x30, 0xf5, 0xbb, 0x81, 0xb3, 0xe7, 0xc6, 0x35,
-	0x24, 0x63, 0xd8, 0x98, 0x8b, 0x94, 0x7d, 0xc3, 0x30, 0xf5, 0x3d, 0xf3, 0x6a, 0x85, 0xc9, 0x08,
-	0x3c, 0x25, 0x1e, 0x23, 0xf7, 0x7b, 0x86, 0xc8, 0x82, 0xf0, 0x47, 0x07, 0xb6, 0x6a, 0x61, 0xdf,
-	0x55, 0x28, 0xd5, 0x0b, 0x74, 0xed, 0x82, 0x31, 0xc4, 0xa8, 0xda, 0x3c, 0x82, 0x89, 0x71, 0xea,
-	0x54, 0x62, 0x19, 0x9b, 0xfa, 0x05, 0x7d, 0x23, 0xf0, 0x70, 0x4e, 0x59, 0x6e, 0xd4, 0x0d, 0x62,
-	0x0b, 0xb4, 0xb6, 0x82, 0x4a, 0x79, 0x26, 0x4a, 0xab, 0x6d, 0x10, 0xaf, 0x70, 0xf8, 0x3d, 0x5c,
-	0xf9, 0x88, 0xf1, 0xf4, 0x3f, 0xbc, 0x09, 0xc0, 0xd3, 0x67, 0x69, 0x6b, 0xdc, 0x35, 0x11, 0xf6,
-	0x45, 0xc3, 0x3d, 0xb7, 0xe5, 0x5e, 0xad, 0xbe, 0xfb, 0x62, 0xf5, 0xe1, 0x6f, 0x0e, 0x6c, 0xda,
-	0xc3, 0x5f, 0x76, 0x7f, 0x7b, 0xbf, 0xce, 0xea, 0x7e, 0x63, 0xd8, 0xc8, 0x29, 0xcf, 0x2a, 0x9a,
-	0xe1, 0xf2, 0xac, 0x15, 0x26, 0xbb, 0x00, 0xf8, 0xa4, 0xc0, 0x92, 0x21, 0x4f, 0x70, 0x69, 0x40,
-	0xa3, 0x42, 0x08, 0x74, 0x0b, 0xbd, 0x4f, 0x3b, 0xe0, 0xc5, 0xe6, 0x59, 0xfb, 0x95, 0xb3, 0x39,
-	0x53, 0xa6, 0x33, 0x5e, 0x6c, 0xc1, 0xb9, 0x8b, 0xfd, 0x86, 0x8b, 0xe1, 0x17, 0x30, 0xfc, 0x00,
-	0x73, 0x54, 0xf8, 0x0a, 0x39, 0x1a, 0x81, 0x97, 0x88, 0x8a, 0x2b, 0x23, 0xda, 0x8d, 0x2d, 0x08,
-	0x0f, 0x61, 0xab, 0x66, 0xbc, 0xa4, 0x01, 0xe1, 0x09, 0x6c, 0x7f, 0x45, 0x73, 0x96, 0xd2, 0x86,
-	0x8c, 0x11, 0x78, 0x0b, 0x5d, 0x33, 0xfb, 0x36, 0x62, 0x0b, 0xc8, 0x1b, 0xd0, 0xd7, 0x26, 0x3f,
-	0x5a, 0x6d, 0xef, 0x69, 0xf8, 0x20, 0x0d, 0x6f, 0xc2, 0xd5, 0x73, 0x0a, 0x7b, 0xee, 0x2a, 0xa0,
-	0x4e, 0x33, 0xa0, 0x7f, 0x3a, 0xd0, 0xd5, 0xdd, 0x3a, 0xf7, 0xc3, 0x79, 0x59, 0xaa, 0x3a, 0xed,
-	0x54, 0xe9, 0x77, 0xfa, 0x34, 0x4e, 0xe7, 0xab, 0x3e, 0xd5, 0x98, 0xbc, 0x05, 0x9b, 0x39, 0x95,
-	0xea, 0x11, 0x4d, 0x14, 0x5b, 0xd8, 0x46, 0x79, 0x31, 0xe8, 0xd2, 0x89, 0xa9, 0xac, 0x35, 0xd2,
-	0xbb, 0xd0, 0xc8, 0x1b, 0x30, 0xa8, 0x9b, 0x2e, 0xfd, 0x5e, 0xe0, 0xee, 0x0d, 0xe2, 0xf3, 0xc2,
-	0xd2, 0xb1, 0x7e, 0xed, 0xd8, 0xd1, 0x3f, 0x5d, 0xd8, 0xd4, 0xb7, 0x78, 0x88, 0xe5, 0x82, 0x25,
-	0x48, 0x3e, 0x03, 0xb8, 0x57, 0x22, 0x55, 0x68, 0xae, 0x76, 0x6d, 0x19, 0xca, 0xe6, 0x1c, 0x8e,
-	0x47, 0xed, 0xa2, 0xb5, 0x39, 0xbc, 0xfe, 0xc3, 0x5f, 0x7f, 0xff, 0xdc, 0xb9, 0x1a, 0x42, 0xb4,
-	0x38, 0x8c, 0x24, 0xcb, 0x78, 0x55, 0x1c, 0x3b, 0xfb, 0xe4, 0x3e, 0x78, 0x9f, 0x8a, 0x8c, 0xf1,
-	0xff, 0x43, 0x35, 0x32, 0x54, 0xc3, 0x70, 0xa0, 0xa9, 0x72, 0xbd, 0x5b, 0x33, 0xc5, 0x00, 0xa7,
-	0x45, 0xfa, 0x0a, 0xca, 0xde, 0x34, 0x74, 0xd7, 0xc2, 0xa1, 0xa6, 0x33, 0x23, 0x19, 0x3d, 0x63,
-	0xe9, 0x73, 0xcd, 0xf9, 0x39, 0x80, 0x8d, 0x58, 0x93, 0xb3, 0x15, 0xba, 0x9a, 0xb3, 0x9d, 0xed,
-	0x70, 0xc7, 0x70, 0x6e, 0xef, 0xaf, 0x71, 0x92, 0xfb, 0xd0, 0xff, 0x18, 0xd5, 0xdd, 0xa7, 0x0f,
-	0x52, 0xf2, 0xba, 0xdd, 0xd8, 0x98, 0xe0, 0x31, 0x69, 0x96, 0xda, 0x4c, 0x64, 0x9d, 0xe9, 0x21,
-	0x80, 0x61, 0xfa, 0xd0, 0xa4, 0xe9, 0x92, 0x64, 0xbb, 0x86, 0xcc, 0x27, 0x3b, 0x6d, 0xb2, 0xe8,
-	0x99, 0xc9, 0xe4, 0x73, 0xf2, 0x89, 0xfe, 0x47, 0xc9, 0x15, 0x96, 0xa7, 0xe6, 0x9f, 0xe9, 0x92,
-	0xac, 0xed, 0xd6, 0x22, 0x2d, 0x93, 0x99, 0x36, 0xef, 0x0e, 0x6c, 0xd5, 0x93, 0xf2, 0xa5, 0x9e,
-	0x08, 0x72, 0xdd, 0xee, 0x5d, 0x1b, 0x9f, 0xf1, 0xce, 0x7a, 0x79, 0x49, 0xfb, 0xda, 0xdd, 0x3f,
-	0x9c, 0x9f, 0x4e, 0x7e, 0x77, 0xc8, 0xd7, 0x70, 0x45, 0xaf, 0x08, 0xa4, 0xcd, 0x60, 0x78, 0xaf,
-	0x8d, 0xc9, 0xdb, 0x33, 0xa5, 0x0a, 0x79, 0x1c, 0x45, 0x19, 0x53, 0xb3, 0x6a, 0x3a, 0x49, 0xc4,
-	0x3c, 0x4a, 0x1e, 0x4f, 0xa7, 0x34, 0xcf, 0xa3, 0x14, 0x17, 0x07, 0xe6, 0xa3, 0x38, 0x9c, 0xe6,
-	0x74, 0x76, 0x67, 0x46, 0x8b, 0xe2, 0xe9, 0x44, 0x94, 0xd9, 0x91, 0x7b, 0x38, 0xb9, 0xb5, 0xdf,
-	0x71, 0x3a, 0x47, 0xdb, 0xb4, 0x28, 0x72, 0x96, 0x98, 0xaf, 0x5e, 0xf4, 0xad, 0x14, 0xfc, 0xf8,
-	0x42, 0x25, 0x7e, 0x1f, 0xdc, 0xdb, 0xb7, 0x6e, 0x93, 0x09, 0xbc, 0x13, 0xa3, 0xaa, 0x4a, 0x8e,
-	0x69, 0x70, 0x36, 0x43, 0x1e, 0x94, 0x28, 0x45, 0x55, 0x26, 0x18, 0xa4, 0x02, 0x25, 0xbf, 0xa9,
-	0x02, 0x7c, 0xc2, 0xa4, 0x22, 0x3d, 0xe8, 0xfe, 0xda, 0x71, 0xfa, 0xd3, 0x9e, 0xf9, 0x86, 0xbe,
-	0xf7, 0x6f, 0x00, 0x00, 0x00, 0xff, 0xff, 0x1d, 0xf9, 0xaa, 0x14, 0xa3, 0x07, 0x00, 0x00,
+	// 838 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x55, 0xc1, 0x8e, 0xdb, 0x44,
+	0x18, 0xc6, 0x76, 0x9c, 0x6c, 0xfe, 0xed, 0xa6, 0xcb, 0x34, 0x5d, 0x42, 0x54, 0x15, 0xcb, 0x20,
+	0x75, 0xb5, 0x62, 0xe3, 0xee, 0x52, 0x2e, 0x7b, 0xea, 0xb6, 0x08, 0x5a, 0x81, 0x00, 0x19, 0x16,
+	0x71, 0xab, 0x26, 0xf6, 0x8f, 0x33, 0xd4, 0x99, 0x19, 0x3c, 0xe3, 0x6c, 0x0b, 0xe2, 0x02, 0x6f,
+	0x00, 0x12, 0x07, 0xee, 0x9c, 0x78, 0x02, 0x0e, 0x9c, 0x78, 0x04, 0x5e, 0x81, 0x07, 0x41, 0x33,
+	0x13, 0x67, 0x9d, 0x6c, 0x8b, 0x4a, 0x4f, 0xf1, 0xf7, 0x7b, 0xe6, 0x9b, 0xef, 0xff, 0xfe, 0x6f,
+	0x62, 0x80, 0x5a, 0x61, 0x35, 0x91, 0x95, 0xd0, 0x82, 0x74, 0xcc, 0xf3, 0xf8, 0x46, 0x21, 0x44,
+	0x51, 0x62, 0x42, 0x25, 0x4b, 0x28, 0xe7, 0x42, 0x53, 0xcd, 0x04, 0x57, 0x6e, 0xcd, 0xf8, 0x6d,
+	0xfb, 0x93, 0x1d, 0x16, 0xc8, 0x0f, 0xd5, 0x39, 0x2d, 0x0a, 0xac, 0x12, 0x21, 0xed, 0x8a, 0xcb,
+	0xab, 0xe3, 0x5f, 0x3c, 0x18, 0x9c, 0x49, 0x85, 0x95, 0x4e, 0x51, 0x49, 0xc1, 0x15, 0x92, 0x5d,
+	0x08, 0xa8, 0x64, 0x23, 0x2f, 0xf2, 0xf6, 0xfb, 0xa9, 0x79, 0x24, 0x7b, 0xd0, 0x55, 0x9a, 0xea,
+	0x5a, 0x8d, 0x7c, 0x5b, 0x5c, 0x22, 0x32, 0x00, 0x9f, 0xe5, 0xa3, 0xc0, 0xd6, 0x7c, 0x96, 0x93,
+	0x11, 0xf4, 0xe6, 0x54, 0x67, 0x33, 0xcc, 0x47, 0x9d, 0xc8, 0xdb, 0x0f, 0xd2, 0x06, 0x92, 0x31,
+	0x6c, 0xcd, 0x45, 0xce, 0xbe, 0x62, 0x98, 0x8f, 0x42, 0xfb, 0x6a, 0x85, 0xc9, 0x10, 0x42, 0x2d,
+	0x1e, 0x23, 0x1f, 0x75, 0x2d, 0x91, 0x03, 0xf1, 0x8f, 0x1e, 0xec, 0x34, 0xc2, 0xbe, 0xa9, 0x51,
+	0xe9, 0x67, 0xe8, 0xba, 0x09, 0xd6, 0x10, 0xab, 0x6a, 0xfb, 0x18, 0x26, 0xd6, 0xa9, 0x33, 0x85,
+	0x55, 0x6a, 0xeb, 0x97, 0xf4, 0x0d, 0x21, 0xc4, 0x39, 0x65, 0xa5, 0x55, 0xd7, 0x4f, 0x1d, 0x30,
+	0xda, 0x24, 0x55, 0xea, 0x5c, 0x54, 0x4e, 0x5b, 0x3f, 0x5d, 0xe1, 0xf8, 0x5b, 0xb8, 0xf2, 0x3e,
+	0xe3, 0xf9, 0x7f, 0x78, 0x13, 0x41, 0x68, 0xce, 0x32, 0xd6, 0x04, 0x1b, 0x22, 0xdc, 0x8b, 0x96,
+	0x7b, 0xc1, 0x9a, 0x7b, 0x8d, 0xfa, 0xce, 0xb3, 0xd5, 0xc7, 0xbf, 0x7b, 0xb0, 0xed, 0x0e, 0x7f,
+	0x5e, 0xff, 0xae, 0x3f, 0x7f, 0xd5, 0xdf, 0x18, 0xb6, 0x4a, 0xca, 0x8b, 0x9a, 0x16, 0xb8, 0x3c,
+	0x6b, 0x85, 0xc9, 0x4d, 0x00, 0x7c, 0x22, 0xb1, 0x62, 0xc8, 0x33, 0x5c, 0x1a, 0xd0, 0xaa, 0x10,
+	0x02, 0x1d, 0x69, 0xf6, 0x19, 0x07, 0xc2, 0xd4, 0x3e, 0x1b, 0xbf, 0x4a, 0x36, 0x67, 0xda, 0x4e,
+	0x26, 0x4c, 0x1d, 0xb8, 0x70, 0xb1, 0xd7, 0x72, 0x31, 0xfe, 0x14, 0x06, 0xef, 0x61, 0x89, 0x1a,
+	0x5f, 0x22, 0x47, 0x43, 0x08, 0x33, 0x51, 0x73, 0x6d, 0x45, 0x07, 0xa9, 0x03, 0xf1, 0x11, 0xec,
+	0x34, 0x8c, 0x2f, 0x68, 0x40, 0x7c, 0x0a, 0xbb, 0x5f, 0xd0, 0x92, 0xe5, 0xb4, 0x25, 0x63, 0x08,
+	0xe1, 0xc2, 0xd4, 0xec, 0xbe, 0xad, 0xd4, 0x01, 0xf2, 0x1a, 0xf4, 0x8c, 0xc9, 0x8f, 0x56, 0xdb,
+	0xbb, 0x06, 0x3e, 0xcc, 0xe3, 0x5b, 0x70, 0xf5, 0x82, 0xc2, 0x9d, 0xbb, 0x0a, 0xa8, 0xd7, 0x0e,
+	0xe8, 0x5f, 0x1e, 0x74, 0xcc, 0xb4, 0x2e, 0xfc, 0xf0, 0x9e, 0x97, 0x2a, 0x7f, 0x3d, 0x55, 0xe6,
+	0x9d, 0x39, 0x8d, 0xd3, 0xf9, 0x6a, 0x4e, 0x0d, 0x26, 0x6f, 0xc0, 0x76, 0x49, 0x95, 0x7e, 0x44,
+	0x33, 0xcd, 0x16, 0x6e, 0x50, 0x61, 0x0a, 0xa6, 0x74, 0x6a, 0x2b, 0x1b, 0x83, 0x0c, 0x2f, 0x0d,
+	0xf2, 0x06, 0xf4, 0x9b, 0xa1, 0xab, 0x51, 0x37, 0x0a, 0xf6, 0xfb, 0xe9, 0x45, 0x61, 0xe9, 0x58,
+	0xaf, 0x71, 0xec, 0xf8, 0xb7, 0x0e, 0x6c, 0x9b, 0x2e, 0x3e, 0xc3, 0x6a, 0xc1, 0x32, 0x24, 0x1f,
+	0x03, 0xdc, 0xaf, 0x90, 0x6a, 0xb4, 0xad, 0x5d, 0x5b, 0x86, 0xb2, 0x7d, 0x0f, 0xc7, 0xc3, 0xf5,
+	0xa2, 0xb3, 0x39, 0xbe, 0xfe, 0xc3, 0xdf, 0xff, 0xfc, 0xec, 0x5f, 0x8d, 0x21, 0x59, 0x1c, 0x25,
+	0x8a, 0x15, 0xbc, 0x96, 0x27, 0xde, 0x01, 0x79, 0x00, 0xe1, 0x47, 0xa2, 0x60, 0xfc, 0xff, 0x50,
+	0x0d, 0x2d, 0xd5, 0x20, 0xee, 0x1b, 0xaa, 0xd2, 0xec, 0x36, 0x4c, 0x29, 0xc0, 0x99, 0xcc, 0x5f,
+	0x42, 0xd9, 0xeb, 0x96, 0xee, 0x5a, 0x3c, 0x30, 0x74, 0xf6, 0x4a, 0x26, 0xdf, 0xb1, 0xfc, 0x7b,
+	0xc3, 0xf9, 0x09, 0x80, 0x8b, 0x58, 0x9b, 0x73, 0x2d, 0x74, 0x0d, 0xe7, 0x7a, 0xb6, 0xe3, 0x3d,
+	0xcb, 0xb9, 0x7b, 0xb0, 0xc1, 0x49, 0x1e, 0x40, 0xef, 0x03, 0xd4, 0xf7, 0x9e, 0x3e, 0xcc, 0xc9,
+	0xab, 0x6e, 0x63, 0xeb, 0x06, 0x8f, 0x49, 0xbb, 0xb4, 0xce, 0x44, 0x36, 0x99, 0x3e, 0x34, 0x97,
+	0xbf, 0xd4, 0x58, 0x9d, 0xd9, 0x3f, 0x91, 0x17, 0x64, 0x5b, 0x9f, 0x02, 0xd2, 0x2a, 0x9b, 0x99,
+	0x3e, 0xef, 0xc2, 0x4e, 0x13, 0xea, 0xcf, 0x4d, 0x78, 0xc9, 0x75, 0xb7, 0x77, 0x23, 0xe9, 0xe3,
+	0xbd, 0xcd, 0xf2, 0x92, 0xf6, 0x95, 0x7b, 0x7f, 0x7a, 0x3f, 0x9d, 0xfe, 0xe1, 0x91, 0x2f, 0xe1,
+	0x8a, 0x59, 0x11, 0x29, 0x17, 0x97, 0xf8, 0xfe, 0x3a, 0x26, 0x6f, 0xce, 0xb4, 0x96, 0xea, 0x24,
+	0x49, 0x0a, 0xa6, 0x67, 0xf5, 0x74, 0x92, 0x89, 0x79, 0x92, 0x3d, 0x9e, 0x4e, 0x69, 0x59, 0x26,
+	0x39, 0x2e, 0x0e, 0xed, 0xf7, 0x6b, 0x30, 0x2d, 0xe9, 0xec, 0xee, 0x8c, 0x4a, 0xf9, 0x74, 0x22,
+	0xaa, 0xe2, 0x38, 0x38, 0x9a, 0xdc, 0x3e, 0xf0, 0x3d, 0xff, 0x78, 0x97, 0x4a, 0x59, 0xb2, 0xcc,
+	0x7e, 0xa0, 0x92, 0xaf, 0x95, 0xe0, 0x27, 0x97, 0x2a, 0xe9, 0xbb, 0x10, 0xdc, 0xb9, 0x7d, 0x87,
+	0x4c, 0xe0, 0xad, 0x14, 0x75, 0x5d, 0x71, 0xcc, 0xa3, 0xf3, 0x19, 0xf2, 0xa8, 0x42, 0x25, 0xea,
+	0x2a, 0xc3, 0x28, 0x17, 0xa8, 0xf8, 0x2d, 0x1d, 0xe1, 0x13, 0xa6, 0x34, 0xe9, 0x42, 0xe7, 0x57,
+	0xdf, 0xeb, 0x4d, 0xbb, 0xf6, 0x73, 0xf7, 0xce, 0xbf, 0x01, 0x00, 0x00, 0xff, 0xff, 0x2c, 0xfe,
+	0x68, 0x52, 0x4e, 0x07, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -690,7 +689,6 @@ type UserServiceClient interface {
 	UpdateUser(ctx context.Context, in *UpsertRequest, opts ...grpc.CallOption) (*UpsertResponse, error)
 	DeleteUser(ctx context.Context, in *DeleteRequest, opts ...grpc.CallOption) (*DeleteResponse, error)
 	GetById(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindResponse, error)
-	GetByEmail(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindResponse, error)
 	FilterUsers(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindResponse, error)
 	ValidateToken(ctx context.Context, in *ValidateRequest, opts ...grpc.CallOption) (*ValidateResponse, error)
 }
@@ -748,15 +746,6 @@ func (c *userServiceClient) GetById(ctx context.Context, in *FindRequest, opts .
 	return out, nil
 }
 
-func (c *userServiceClient) GetByEmail(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindResponse, error) {
-	out := new(FindResponse)
-	err := c.cc.Invoke(ctx, "/user.UserService/GetByEmail", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 func (c *userServiceClient) FilterUsers(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindResponse, error) {
 	out := new(FindResponse)
 	err := c.cc.Invoke(ctx, "/user.UserService/FilterUsers", in, out, opts...)
@@ -782,7 +771,6 @@ type UserServiceServer interface {
 	UpdateUser(context.Context, *UpsertRequest) (*UpsertResponse, error)
 	DeleteUser(context.Context, *DeleteRequest) (*DeleteResponse, error)
 	GetById(context.Context, *FindRequest) (*FindResponse, error)
-	GetByEmail(context.Context, *FindRequest) (*FindResponse, error)
 	FilterUsers(context.Context, *FindRequest) (*FindResponse, error)
 	ValidateToken(context.Context, *ValidateRequest) (*ValidateResponse, error)
 }
@@ -805,9 +793,6 @@ func (*UnimplementedUserServiceServer) DeleteUser(ctx context.Context, req *Dele
 }
 func (*UnimplementedUserServiceServer) GetById(ctx context.Context, req *FindRequest) (*FindResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetById not implemented")
-}
-func (*UnimplementedUserServiceServer) GetByEmail(ctx context.Context, req *FindRequest) (*FindResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method GetByEmail not implemented")
 }
 func (*UnimplementedUserServiceServer) FilterUsers(ctx context.Context, req *FindRequest) (*FindResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method FilterUsers not implemented")
@@ -910,24 +895,6 @@ func _UserService_GetById_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
-func _UserService_GetByEmail_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(FindRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(UserServiceServer).GetByEmail(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/user.UserService/GetByEmail",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(UserServiceServer).GetByEmail(ctx, req.(*FindRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 func _UserService_FilterUsers_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(FindRequest)
 	if err := dec(in); err != nil {
@@ -987,10 +954,6 @@ var _UserService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetById",
 			Handler:    _UserService_GetById_Handler,
-		},
-		{
-			MethodName: "GetByEmail",
-			Handler:    _UserService_GetByEmail_Handler,
 		},
 		{
 			MethodName: "FilterUsers",
